fixed itinerary spacing

--- a/src/components/itinerary.module.css
+++ b/src/components/itinerary.module.css
@@ -4,19 +4,19 @@
 }
 
 .day-heading {
-    margin: 0;
+    margin-left: 0;
     font-weight: bold;
-    font-size: 1em;
+    font-size: .8em;
 }
 
 .day-items-container {
     border-left: 2px solid black;
     margin: 10px 0 10px 45px;
-    font-size: .9em;
+    font-size: .7em;
 }
 
 .day-item {
-    margin: 10px 0 0 10px;
+    margin: 5px 0 0 10px;
 }
 
 .meals {
